@@ -1,13 +1,0 @@
-<component name="libraryTable">
-  <library name="Maven: net.sf.bluecove:bluecove:2.1.0">
-    <CLASSES>
-      <root url="jar://$MAVEN_REPOSITORY$/net/sf/bluecove/bluecove/2.1.0/bluecove-2.1.0.jar!/" />
-    </CLASSES>
-    <JAVADOC>
-      <root url="jar://$MAVEN_REPOSITORY$/net/sf/bluecove/bluecove/2.1.0/bluecove-2.1.0-javadoc.jar!/" />
-    </JAVADOC>
-    <SOURCES>
-      <root url="jar://$MAVEN_REPOSITORY$/net/sf/bluecove/bluecove/2.1.0/bluecove-2.1.0-sources.jar!/" />
-    </SOURCES>
-  </library>
-</component>
